include/El/lapack_like/factor.py


lib.ElSolveAfterLUPartialPiv_s.argtypes = [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPiv_s.restype = c_uint
lib.ElSolveAfterLUPartialPiv_d.argtypes = [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPiv_d.restype = c_uint
lib.ElSolveAfterLUPartialPiv_c.argtypes = [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPiv_c.restype = c_uint
lib.ElSolveAfterLUPartialPiv_z.argtypes = [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPiv_z.restype = c_uint
lib.ElSolveAfterLUPartialPivDist_s.restype = c_uint
lib.ElSolveAfterLUPartialPivDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPivDist_d.restype = c_uint
lib.ElSolveAfterLUPartialPivDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPivDist_c.restype = c_uint
lib.ElSolveAfterLUPartialPivDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUPartialPivDist_z.restype = c_uint
def SolveAfterLUPartialPiv(orient,A,p,B):
  if type(A) is not type(p) or type(p) is not type(B):
    raise Exception('Types of {A,p,B} must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLUPartialPiv_s(orient,A.obj,p.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLUPartialPiv_d(orient,A.obj,p.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterLUPartialPiv_c(orient,A.obj,p.obj,B.obj)
    elif A.tag == zTag: lib.ElSolveAfterLUPartialPiv_z(orient,A.obj,p.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElSolveAfterLUPartialPivDist_s(orient,A.obj,p.obj,B.obj)
    elif A.tag == dTag: 
      lib.ElSolveAfterLUPartialPivDist_d(orient,A.obj,p.obj,B.obj)
    elif A.tag == cTag: 
      lib.ElSolveAfterLUPartialPivDist_c(orient,A.obj,p.obj,B.obj)
    elif A.tag == zTag: 
      lib.ElSolveAfterLUPartialPivDist_z(orient,A.obj,p.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElSolveAfterLUFullPiv_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPiv_s.restype = c_uint
lib.ElSolveAfterLUFullPiv_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPiv_d.restype = c_uint
lib.ElSolveAfterLUFullPiv_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPiv_c.restype = c_uint
lib.ElSolveAfterLUFullPiv_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPiv_z.restype = c_uint
lib.ElSolveAfterLUFullPivDist_s.restype = c_uint
lib.ElSolveAfterLUFullPivDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPivDist_d.restype = c_uint
lib.ElSolveAfterLUFullPivDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPivDist_c.restype = c_uint
lib.ElSolveAfterLUFullPivDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLUFullPivDist_z.restype = c_uint
def SolveAfterLUFullPiv(orient,A,p,q,B):
  if type(A) is not type(p) or type(p) is not type(q) or type(q) is not type(B):
    raise Exception('Types of {A,p,q,B} must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if p.tag != iTag or q.tag != iTag:
    raise Exception('p and q must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag:
      lib.ElSolveAfterLUFullPiv_s(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == dTag:
      lib.ElSolveAfterLUFullPiv_d(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterLUFullPiv_c(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == zTag:
      lib.ElSolveAfterLUFullPiv_z(orient,A.obj,p.obj,q.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElSolveAfterLUFullPivDist_s(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == dTag: 
      lib.ElSolveAfterLUFullPivDist_d(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == cTag: 
      lib.ElSolveAfterLUFullPivDist_c(orient,A.obj,p.obj,q.obj,B.obj)
    elif A.tag == zTag: 
      lib.ElSolveAfterLUFullPivDist_z(orient,A.obj,p.obj,q.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# LQ factorization
# ================
(LQ_IMPLICIT,LQ_EXPLICIT,LQ_EXPLICIT_TRIANG,LQ_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElLQ_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQ_s.restype = c_uint
lib.ElLQ_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQ_d.restype = c_uint
lib.ElLQ_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQ_c.restype = c_uint
lib.ElLQ_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQ_z.restype = c_uint
lib.ElLQDist_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQDist_s.restype = c_uint
lib.ElLQDist_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQDist_d.restype = c_uint
lib.ElLQDist_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQDist_c.restype = c_uint
lib.ElLQDist_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLQDist_z.restype = c_uint
lib.ElLQExplicit_s.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicit_s.restype = c_uint
lib.ElLQExplicit_d.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicit_d.restype = c_uint
lib.ElLQExplicit_c.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicit_c.restype = c_uint
lib.ElLQExplicit_z.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicit_z.restype = c_uint
lib.ElLQExplicitDist_s.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicitDist_s.restype = c_uint
lib.ElLQExplicitDist_d.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicitDist_d.restype = c_uint
lib.ElLQExplicitDist_c.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicitDist_c.restype = c_uint
lib.ElLQExplicitDist_z.argtypes = [c_void_p,c_void_p]
lib.ElLQExplicitDist_z.restype = c_uint
lib.ElLQExplicitUnitary_s.argtypes = [c_void_p]
lib.ElLQExplicitUnitary_s.restype = c_uint
lib.ElLQExplicitUnitary_d.argtypes = [c_void_p]
lib.ElLQExplicitUnitary_d.restype = c_uint
lib.ElLQExplicitUnitary_c.argtypes = [c_void_p]
lib.ElLQExplicitUnitary_c.restype = c_uint
lib.ElLQExplicitUnitary_z.argtypes = [c_void_p]
lib.ElLQExplicitUnitary_z.restype = c_uint
lib.ElLQExplicitUnitaryDist_s.argtypes = [c_void_p]
lib.ElLQExplicitUnitaryDist_s.restype = c_uint
lib.ElLQExplicitUnitaryDist_d.argtypes = [c_void_p]
lib.ElLQExplicitUnitaryDist_d.restype = c_uint
lib.ElLQExplicitUnitaryDist_c.argtypes = [c_void_p]
lib.ElLQExplicitUnitaryDist_c.restype = c_uint
lib.ElLQExplicitUnitaryDist_z.argtypes = [c_void_p]
lib.ElLQExplicitUnitaryDist_z.restype = c_uint
lib.ElLQExplicitTriang_s.argtypes = [c_void_p]
lib.ElLQExplicitTriang_s.restype = c_uint
lib.ElLQExplicitTriang_d.argtypes = [c_void_p]
lib.ElLQExplicitTriang_d.restype = c_uint
lib.ElLQExplicitTriang_c.argtypes = [c_void_p]
lib.ElLQExplicitTriang_c.restype = c_uint
lib.ElLQExplicitTriang_z.argtypes = [c_void_p]
lib.ElLQExplicitTriang_z.restype = c_uint
lib.ElLQExplicitTriangDist_s.argtypes = [c_void_p]
lib.ElLQExplicitTriangDist_s.restype = c_uint
lib.ElLQExplicitTriangDist_d.argtypes = [c_void_p]
lib.ElLQExplicitTriangDist_d.restype = c_uint
lib.ElLQExplicitTriangDist_c.argtypes = [c_void_p]
lib.ElLQExplicitTriangDist_c.restype = c_uint
lib.ElLQExplicitTriangDist_z.argtypes = [c_void_p]
lib.ElLQExplicitTriangDist_z.restype = c_uint
def LQ(A,factType=LQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == LQ_IMPLICIT:
      t = Matrix(A.tag)
      d = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElLQ_s(A.obj,t.obj,d.obj)
      elif A.tag == dTag: lib.ElLQ_d(A.obj,t.obj,d.obj)
      elif A.tag == cTag: lib.ElLQ_c(A.obj,t.obj,d.obj)
      elif A.tag == zTag: lib.ElLQ_z(A.obj,t.obj,d.obj)
      else: raise Exception('Unsupported datatype')
      return t, d
    elif factType == LQ_EXPLICIT:
      L = Matrix(A.tag)
      if   A.tag == sTag: lib.ElLQExplicit_s(L.obj,A.obj)
      elif A.tag == dTag: lib.ElLQExplicit_d(L.obj,A.obj)
      elif A.tag == cTag: lib.ElLQExplicit_c(L.obj,A.obj)
      elif A.tag == zTag: lib.ElLQExplicit_z(L.obj,A.obj)
      else: raise Exception('Unsupported datatype')
      return L
    elif factType == LQ_EXPLICIT_UNITARY:
      if   A.tag == sTag: lib.ElLQExplicitUnitary_s(A.obj)
      elif A.tag == dTag: lib.ElLQExplicitUnitary_d(A.obj)
      elif A.tag == cTag: lib.ElLQExplicitUnitary_c(A.obj)
      elif A.tag == zTag: lib.ElLQExplicitUnitary_z(A.obj)
      else: raise Exception('Unsupported datatype')
    elif factType == LQ_EXPLICIT_TRIANG:
      if   A.tag == sTag: lib.ElLQExplicitTriang_s(A.obj)
      elif A.tag == dTag: lib.ElLQExplicitTriang_d(A.obj)
      elif A.tag == cTag: lib.ElLQExplicitTriang_c(A.obj)
      elif A.tag == zTag: lib.ElLQExplicitTriang_z(A.obj)
      else: raise Exception('Unsupported datatype')
    else: raise Exception('Unsupported LQ factorization type')
  elif type(A) is DistMatrix:
    if factType == LQ_IMPLICIT:
      t = DistMatrix(A.tag,MC,STAR,A.Grid())
      d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
      if   A.tag == sTag: lib.ElLQDist_s(A.obj,t.obj,d.obj)
      elif A.tag == dTag: lib.ElLQDist_d(A.obj,t.obj,d.obj)
      elif A.tag == cTag: lib.ElLQDist_c(A.obj,t.obj,d.obj)
      elif A.tag == zTag: lib.ElLQDist_z(A.obj,t.obj,d.obj)
      else: raise Exception('Unsupported datatype')
      return t, d
    elif factType == LQ_EXPLICIT:
      L = DistMatrix(A.tag,MC,MR,A.Grid())
      if   A.tag == sTag: lib.ElLQExplicitDist_s(L.obj,A.obj)
      elif A.tag == dTag: lib.ElLQExplicitDist_d(L.obj,A.obj)
      elif A.tag == cTag: lib.ElLQExplicitDist_c(L.obj,A.obj)
      elif A.tag == zTag: lib.ElLQExplicitDist_z(L.obj,A.obj)
      else: raise Exception('Unsupported datatype')
      return L
    elif factType == LQ_EXPLICIT_UNITARY:
      if   A.tag == sTag: lib.ElLQExplicitUnitaryDist_s(A.obj)
      elif A.tag == dTag: lib.ElLQExplicitUnitaryDist_d(A.obj)
      elif A.tag == cTag: lib.ElLQExplicitUnitaryDist_c(A.obj)
      elif A.tag == zTag: lib.ElLQExplicitUnitaryDist_z(A.obj)
      else: raise Exception('Unsupported datatype')
    elif factType == LQ_EXPLICIT_TRIANG:
      if   A.tag == sTag: lib.ElLQExplicitTriangDist_s(A.obj)
      elif A.tag == dTag: lib.ElLQExplicitTriangDist_d(A.obj)
      elif A.tag == cTag: lib.ElLQExplicitTriangDist_c(A.obj)
      elif A.tag == zTag: lib.ElLQExplicitTriangDist_z(A.obj)
      else: raise Exception('Unsupported datatype')
    else: raise Exception('Unsupported LQ factorization type')
  else: raise Exception('Unsupported datatype')
